Had some folder issues, syncing everything back together.

--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-s<!-- Navbar -->
+<!-- Navbar -->
 <nav class="navbar fixed-top navbar-light navbar-bg">
     <div class='row'>
-        <div class='col-md-1 navHidden'></div>
-        <div class='col-md-1 navHidden'><a href="#intro" class='navOption'>About</a></div>
-        <div class='col-md-1 navHidden'></div>
-        <div class='col-md-1 navHidden'><a href="#resume" class='navOption'>Resume</a></div>
-        <div class='col-md-12 navTrigger headerName'>Jared M</div>
-        <div class='col-md-1 navHidden'><a href="#portfolio" class='navOption'>Portfolio</a></div>
-        <div class='col-md-1 navHidden'></div>
-        <div class='col-md-1 navHidden'><a href="#contact" class='navOption'>Contact</a></div>
-        <div class='col-md-1 navHidden'></div>
+        <div class='col-sm-1 navHidden'></div>
+        <div class='col-sm-1 navHidden'><a href="#intro" class='navOption'>About</a></div>
+        <div class='col-sm-1 navHidden'></div>
+        <div class='col-sm-1 navHidden'><a href="#resume" class='navOption'>Resume</a></div>
+        <div class='col-sm-12 navTrigger headerName'>Jared M</div>
+        <div class='col-sm-1 navHidden'><a href="https://github.com/JaredMezz2" class='navOption'>Portfolio</a></div>
+        <div class='col-sm-1 navHidden'></div>
+        <div class='col-sm-1 navHidden'><a href="#contact" class='navOption'>Contact</a></div>
+        <div class='col-sm-1 navHidden'></div>
     </div>
 </nav>
 <!-- Parralax Section 1 -->
-<div class='firstLax'>
-    <div class="container">
+<div class='firstLax vertCenter'>
+    <div class="container centerIt">
         <div class="row nameHeader">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-8 col-md-12 homeName">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-10 col-sm-12 homeName">
                 <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Amateur Python/Web Developer.</h2>
             </div>
-            <div class="col-lg-2"></div>
+            <div class="col-lg-1"></div>
         </div>
     </div>
 </div>
@@ -45,19 +45,18 @@ s<!-- Navbar -->
 <div id='intro'>
     <div class='container'>
         <div class='row'>
-            <div class='col-md-6'>
+            <div class='col-sm-6'>
                 <section class='aboutdesc'>
                     <h2 class='nameEmph'>Jared Mezzatesta</h2>
                     <h2>19 Years Old</h2>
                     <h2>Trent University</h2>
                 </section>
             </div>
-            <div class='col-md-6'>
-                <section class='social'>
-                    <h2>Github - <a href="https://github.com/JaredMezz2">JaredMezz2</a></h2>
-                    <h2>LinkedIn - <a href="https://www.linkedin.com/in/jared-mezzatesta-172a91122/">JaredMezzatesta</a></h2>
-                    <h2>Twitter - <a href="https://www.twitter.com/JaredMezz">@JaredMezz</a></h2>
-
+            <div class='col-sm-6'>
+                <section class='aboutdesc'>
+                    <h2><i class="fab fa-github"></i> - <a href="https://github.com/JaredMezz2">JaredMezz2</a></h2>
+                    <h2><i class="fab fa-linkedin"></i> - <a href="https://www.linkedin.com/in/JaredMezzatesta">JaredMezzatesta</a></h2>
+                    <h2><i class="fab fa-twitter"></i> - <a href="https://www.twitter.com/JaredMezz">@JaredMezz</a></h2>
                 </section>
             </div>
         </div>
@@ -68,8 +67,8 @@ s<!-- Navbar -->
     <div class='container'>
         <!-- Skills -->
         <div class='row'>
-            <div class='col-md-1 sideBar'></div>
-            <div class='col-md-8'>
+            <div class='col-lg-1 col-sm-0 sideBar'></div>
+            <div class='col-lg-8 col-sm-9'>
                 <h2 class='titleHighlight'>Resume</h2>
                 <br>
                 <div class='blurp'>
@@ -78,10 +77,10 @@ s<!-- Navbar -->
                     <h4>Python</h4>
                     <p>Used throughout 3 years of schooling.</p>
                     <h4>C#</h4>
-                    <p>Current Language used in school.</p>
+                    <p>Current Language used in School</p>
                 </div>
             </div>
-            <div class='col-md-3'>
+            <div class='col-lg-3 col-sm-1'>
                 <!-- Header -->
                 <br>
                 <h3>Skills</h3>
@@ -90,8 +89,8 @@ s<!-- Navbar -->
 
         <!-- Work History -->
         <div class='row'>
-            <div class='col-md-1 sideBar'></div>
-            <div class='col-md-8 blurp'>
+            <div class='col-lg-1 col-sm-0 sideBar'></div>
+            <div class='col-lg-8 col-sm-9 blurp'>
                 <br>
                 <h4>Tim Hortons</h4>
                 <p>Counter Staff, Food Production, Supervisor</p>
@@ -101,7 +100,7 @@ s<!-- Navbar -->
                 <p>Lawn Care Technition</p>
                 <p>05/18 - 08/18</p>
             </div>
-            <div class='col-md-3'>
+            <div class='col-lg-3 col-sm-1'>
                 <!-- Header -->
                 <h3>Employment</h3>
             </div>
@@ -109,14 +108,14 @@ s<!-- Navbar -->
 
         <!-- Education -->
         <div class='row'>
-            <div class='col-md-1 sideBar'></div>
-            <div class='col-md-8 blurp'>
+            <div class='col-lg-1 col-sm-0 sideBar'></div>
+            <div class='col-lg-8 col-sm-9 blurp'>
                 <br>
                 <h4>Trent University</h4>
                 <p>Pursing a degree in Computer Science</p>
                 <p>Exp 2021</p>
             </div>
-            <div class='col-md-3'>
+            <div class='col-lg-3 col-sm-1'>
                 <!-- Header -->
                 <h3>Education</h3>
             </div>
@@ -125,50 +124,39 @@ s<!-- Navbar -->
 </div>
 <!-- Parralax Section 2 -->
 <div class='secondLax'></div>
-<!-- Resune -->
-<div id='portfolio'>
-    <div class='container'>
-        <div class='row'>
-            <div class='col-md-1 sideBar'></div>
-            <div class='col-md-11'>
-                <h2 class='titleHighlight'>Portfolio</h2>
-                <br>
-                <div class='row'>
-                    <div class='col-md-3 siteView'></div>
-                    <div class='col-md-3 siteView'></div>
-                    <div class='col-md-3 siteView'></div>
-                </div>
-                <div class='row'>
-                    <div class='col-md-3 siteView'></div>
-                    <div class='col-md-3 siteView'></div>
-                    <div class='col-md-3 siteView'></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<!-- Resume - I dont have enough to fill this section so its unecessary-->
+<!--<div id='portfolio'>-->
+    <!--<div class='container'>-->
+        <!--<div class='row'>-->
+            <!--<div class='col-lg-1 col-sm-0 sideBar'></div>-->
+            <!--<div class='col-lg-11 col-sm-11'>-->
+                <!--<h2 class='titleHighlight'>Portfolio</h2>-->
+                <!--<br>-->
+                <!--<div class='row'>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                <!--</div>-->
+                <!--<div class='row'>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                    <!--<div class='col-md-3 siteView'></div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 <!-- Contact -->
-
 <div id='contact'>
     <div class='container'>
         <div class='row'>
-            <div class='col-md-1 sideBar'></div>
-            <div class='col-md-11'>
+            <div class='col-lg-1 col-sm-0 sideBar'></div>
+            <div class='col-lg-11 col-sm-11'>
                 <h2 class='titleHighlight'>Contact</h2>
                 <br>
-                <h5>Feel free to shoot me a message and I'll be sure to get back to you.</h5>
-                <form class='myForm'>
-                    <label for="yname">Name </label>
-                    <input type="text" placeholder='- your name' id='yname' autocomplete="name">
-                    <br>
-                    <label for="yemail">Email </label>
-                    <input type="email" placeholder='- your email' id='yemail' autocomplete="email">
-                    <br>
-                    <label for="ymessage"></label>
-                    <textarea name="textarea" id="ymessage" cols="70" rows="5" placeholder='your message.'></textarea>
-                    <br>
-                    <button class='submitButton' type='button'>Submit</button>
-                </form>
+                <h5>Feel free to shoot me an email and I'll be sure to get back to you.</h5>
+                <br>
+                <h5><i class="fas fa-envelope"></i>  Jared.Mezzatesta@gmail.com</h5>
             </div>
         </div>
     </div>
