Updated some info

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="row nameHeader">
             <div class="col-lg-1"></div>
             <div class="col-lg-10 col-sm-12 homeName">
-                <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Amateur Python/Web Developer.</h2>
+                <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Amateur C#/Python/Web Developer.</h2>
             </div>
             <div class="col-lg-1"></div>
         </div>
@@ -48,7 +48,7 @@
             <div class='col-sm-6'>
                 <section class='aboutdesc'>
                     <h2 class='nameEmph'>Jared Mezzatesta</h2>
-                    <h2>19 Years Old</h2>
+                    <h2>20 Years Old</h2>
                     <h2>Trent University</h2>
                 </section>
             </div>
@@ -78,6 +78,8 @@
                     <p>Used throughout 3 years of schooling.</p>
                     <h4>C#</h4>
                     <p>Current Language used in School</p>
+                    <h4>Java</h4>
+                    <p>Used in Software Design Classes</p>
                 </div>
             </div>
             <div class='col-lg-3 col-sm-1'>
@@ -94,11 +96,11 @@
                 <br>
                 <h4>Tim Hortons</h4>
                 <p>Counter Staff, Food Production, Supervisor</p>
-                <p>08/15-08/17</p>
+                <p>08/15 - 08/17</p>
                 <br>
                 <h4>WeedMan</h4>
                 <p>Lawn Care Technition</p>
-                <p>05/18 - 08/18</p>
+                <p>05/18 - 08/18 & 05/19 - 08/19</p>
             </div>
             <div class='col-lg-3 col-sm-1'>
                 <!-- Header -->
