Added in the portfolio section to showcase projects as i've been using this site to apply for jobs and didnt have it included.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class='col-sm-1 navHidden'></div>
         <div class='col-sm-1 navHidden'><a href="#resume" class='navOption'>Resume</a></div>
         <div class='col-sm-12 navTrigger headerName'>Jared M</div>
-        <div class='col-sm-1 navHidden'><a href="https://github.com/JaredMezz2" class='navOption'>Portfolio</a></div>
+        <div class='col-sm-1 navHidden'><a href="#portfolio" class='navOption'>Portfolio</a></div>
         <div class='col-sm-1 navHidden'></div>
         <div class='col-sm-1 navHidden'><a href="#contact" class='navOption'>Contact</a></div>
         <div class='col-sm-1 navHidden'></div>
@@ -35,7 +35,7 @@
         <div class="row nameHeader">
             <div class="col-lg-1"></div>
             <div class="col-lg-10 col-sm-12 homeName">
-                <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Amateur C#/Python/Web Developer.</h2>
+                <h2>Hi, I'm <br><span id='name'>Jared Mezzatesta</span><br>Amateur Full Stack / Python Developer</h2>
             </div>
             <div class="col-lg-1"></div>
         </div>
@@ -48,7 +48,7 @@
             <div class='col-sm-6'>
                 <section class='aboutdesc'>
                     <h2 class='nameEmph'>Jared Mezzatesta</h2>
-                    <h2>20 Years Old</h2>
+                    <h2>22 Years Old</h2>
                     <h2>Trent University</h2>
                 </section>
             </div>
@@ -72,12 +72,12 @@
                 <h2 class='titleHighlight'>Resume</h2>
                 <br>
                 <div class='blurp'>
-                    <h4>HTML/CSS/Javascript</h4>
-                    <p>Developed through a personal interest.</p>
+                    <h4>Web Development</h4>
+                    <p>HTML/CSS, Javascript, PHP used in my schooling</p>
+                    <p>jQuery, Typescript, ejs used in personal projects</p>
+                    <p>Node.JS, Express, MongoDB learned through a Full Stack Bootcamp</p>
                     <h4>Python</h4>
-                    <p>Used throughout 3 years of schooling.</p>
-                    <h4>C#</h4>
-                    <p>Current Language used in School</p>
+                    <p>Used throughout 3 years of schooling, as well as personal projects</p>
                     <h4>Java</h4>
                     <p>Used in Software Design Classes</p>
                 </div>
@@ -93,14 +93,21 @@
         <div class='row'>
             <div class='col-lg-1 col-sm-0 sideBar'></div>
             <div class='col-lg-8 col-sm-9 blurp'>
-                <br>
-                <h4>Tim Hortons</h4>
-                <p>Counter Staff, Food Production, Supervisor</p>
-                <p>08/15 - 08/17</p>
-                <br>
-                <h4>WeedMan</h4>
-                <p>Lawn Care Technition</p>
-                <p>05/18 - 08/18 & 05/19 - 08/19</p>
+                <section>
+                    <h4>Concentrix</h4>
+                    <p>Customer Service Representative</p>
+                    <p>06/2020 - Current</p>
+                </section>
+                <section>
+                    <h4>Weed Man</h4>
+                    <p>Lawn Care Technition</p>
+                    <p>05/18 - 08/18 & 05/19 - 08/19</p>
+                </section>
+                <section>
+                    <h4>Tim Hortons</h4>
+                    <p>Counter Staff, Food Production, Supervisor</p>
+                    <p>08/15 - 08/17</p>
+                </section>
             </div>
             <div class='col-lg-3 col-sm-1'>
                 <!-- Header -->
@@ -114,7 +121,8 @@
             <div class='col-lg-8 col-sm-9 blurp'>
                 <br>
                 <h4>Trent University</h4>
-                <p>Pursing a degree in Computer Science</p>
+                <p>Pursing a degree in Computer Science with a specialization in Software Engineering</p>
+                <p>3.7  GPA</p>
                 <p>Exp 2021</p>
             </div>
             <div class='col-lg-3 col-sm-1'>
@@ -127,27 +135,116 @@
 <!-- Parralax Section 2 -->
 <div class='secondLax'></div>
 <!-- Resume - I dont have enough to fill this section so its unecessary-->
-<!--<div id='portfolio'>-->
-    <!--<div class='container'>-->
-        <!--<div class='row'>-->
-            <!--<div class='col-lg-1 col-sm-0 sideBar'></div>-->
-            <!--<div class='col-lg-11 col-sm-11'>-->
-                <!--<h2 class='titleHighlight'>Portfolio</h2>-->
-                <!--<br>-->
-                <!--<div class='row'>-->
-                    <!--<div class='col-md-3 siteView'></div>-->
-                    <!--<div class='col-md-3 siteView'></div>-->
-                    <!--<div class='col-md-3 siteView'></div>-->
-                <!--</div>-->
-                <!--<div class='row'>-->
-                    <!--<div class='col-md-3 siteView'></div>-->
-                    <!--<div class='col-md-3 siteView'></div>-->
-                    <!--<div class='col-md-3 siteView'></div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
+<div id='portfolio'>
+    <div class='container'>
+        <div class='row'>
+            <div class='col-lg-1 col-sm-0 sideBar'></div>
+            <div class='col-lg-11 col-sm-11'>
+                <h2 class='titleHighlight'>Portfolio</h2>
+                <div class="card bg-light border-secondary">
+                    <div class="row" style="margin: 0">
+                        <div  class="col-lg-3 col-sm-12 d-flex">
+                            <div class="card-img align-self-center mx-auto">
+                                <img src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png" alt="" class="img-thumbnail">
+                            </div>
+                        </div>
+                        <div  class="col-lg-6 col-sm-12">
+                            <div class="card-body d-flex flex-column">
+                                <h4>Blue Lakes Project</h4>
+                                <p class="text-left">Working alongside a non-profit local organization to create an application for reporting
+                                both Lake Health findings as well as Angler Reports, and it then uses this data to provide insights
+                                on the surrounding Lakes. RESTful routing, and semantic code throughout.</p>
+
+                                <div class="btn-group special" role="group">
+                                    <button type="button" class="btn btn-danger" disabled>WIP</button>
+                                    <a href="https://github.com/mtdnichol/BlueLakesProject" type="button" class="btn btn-primary">View Code</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-12 card-body d-flex flex-column align-items-center">
+                            <div class="row">
+                                <h4>Tech Used</h4>
+                            </div>
+                            <div class="row">
+                                <ul>
+                                    <li>Node.JS</li>
+                                    <li>Express</li>
+                                    <li>MongoDB</li>
+                                    <li>JS / jQuery / EJS</li>
+                                    <li>HTML / CSS </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card bg-light border-secondary">
+                    <div class="row" style="margin: 0">
+                        <div  class="col-lg-3 col-sm-12 d-flex">
+                            <div class="card-img align-self-center mx-auto">
+                                <img src="TypeSpeed.png" alt="" class="img-thumbnail">
+                            </div>
+                        </div>
+                        <div  class="col-lg-6 col-sm-12">
+                            <div class="card-body d-flex flex-column">
+                                <h4>Typing Speed Test</h4>
+                                <p class="text-left">Personal project, I've always been a fan of practicing typing and becoming faster
+                                    at it, so with plenty of experience on other test websites I figured I'd make one of my own!
+                                    Select number of words and it displays your WPM as well as the Accuracy in the run.</p>
+                                <div class="btn-group special" role="group">
+                                    <a href="/TypeTest" type="button" class="btn btn-primary">Live Site</a>
+                                    <a href="https://github.com/JaredMezz2/TypeSpeed" type="button" class="btn btn-primary">View Code</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-12 card-body d-flex flex-column align-items-center">
+                            <div class="row">
+                                <h4>Tech Used</h4>
+                            </div>
+                            <div class="row">
+                                <ul>
+                                    <li>Javascript</li>
+                                    <li>HTML / CSS</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-light border-secondary">
+                    <div class="row" style="margin: 0">
+                        <div  class="col-lg-3 col-sm-12 d-flex">
+                            <div class="card-img align-self-center mx-auto">
+                                <img src="BucketList.png" alt="" class="img-thumbnail">
+                            </div>
+                        </div>
+                        <div  class="col-lg-6 col-sm-12">
+                            <div class="card-body d-flex flex-column">
+                                <h4>Bucket List</h4>
+                                <p class="text-left">School Project developed by myself and two classmates. All custom PHP to create accounts,
+                                    create public/private lists, create items, share lists, and search for public lists.</p>
+                                <a href="https://github.com/mtdnichol/COIS3420_FinalProject" class="mt-auto btn btn-primary btn-block">View Code</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-12 card-body d-flex flex-column align-items-center">
+                            <div class="row">
+                                <h4>Tech Used</h4>
+                            </div>
+                            <div class="row">
+                                <ul>
+                                    <li>HTML / CSS</li>
+                                    <li>Javascript</li>
+                                    <li>PHP</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+</div>
 <!-- Contact -->
 <div id='contact'>
     <div class='container'>
