moving deployment to caprover server

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="row" style="margin: 0">
                         <div  class="col-lg-3 col-sm-12 d-flex">
                             <div class="card-img align-self-center mx-auto">
-                                <img src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png" alt="" class="img-thumbnail">
+                                <img src="" alt="" class="img-thumbnail">
                             </div>
                         </div>
                         <div  class="col-lg-6 col-sm-12">
