--- a/index.html
+++ b/index.html
@@ -94,9 +94,14 @@
             <div class='col-lg-1 col-sm-0 sideBar'></div>
             <div class='col-lg-8 col-sm-9 blurp'>
                 <section>
+                    <h4>The Land Between</h4>
+                    <p>Software Developer</p>
+                    <p>04/2021 - Current</p>
+                </section>
+                <section>
                     <h4>Concentrix</h4>
                     <p>Customer Service Representative</p>
-                    <p>06/2020 - Current</p>
+                    <p>02/2020 - 03-2021</p>
                 </section>
                 <section>
                     <h4>Weed Man</h4>
@@ -156,8 +161,8 @@
                                 on the surrounding Lakes. RESTful routing, and semantic code throughout.</p>
 
                                 <div class="btn-group special" role="group">
-                                    <button type="button" class="btn btn-danger" disabled>WIP</button>
-                                    <a href="https://github.com/mtdnichol/BlueLakesProject" type="button" class="btn btn-primary">View Code</a>
+                                    <a class="btn btn-danger" disabled>WIP</a>
+                                    <a href="https://github.com/mtdnichol/BlueLakesProject" class="btn btn-primary">View Code</a>
                                 </div>
                             </div>
                         </div>
@@ -192,8 +197,8 @@
                                     at it, so with plenty of experience on other test websites I figured I'd make one of my own!
                                     Select number of words and it displays your WPM as well as the Accuracy in the run.</p>
                                 <div class="btn-group special" role="group">
-                                    <a href="/TypeTest" type="button" class="btn btn-primary">Live Site</a>
-                                    <a href="https://github.com/JaredMezz2/TypeSpeed" type="button" class="btn btn-primary">View Code</a>
+                                    <a href="https://typespeed.jaredmezz.com" class="btn btn-primary">Live Site</a>
+                                    <a href="https://github.com/JaredMezz2/TypeSpeed" class="btn btn-primary">View Code</a>
                                 </div>
                             </div>
                         </div>
